--- a/notebooks/Ex02_ContinuousRandomVariable.ipynb
+++ b/notebooks/Ex02_ContinuousRandomVariable.ipynb
@@ -4,15 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Probability Density Functions in Python\n",
+    "# Continuous Random Variables\n",
     "\n",
-    "Date: 2020-10-30"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Date: 2020-11-09\n",
+    "\n",
     "## Scenario\n",
     "\n",
     "Let $X$ be a continuous random variable with p.d.f.\n",
@@ -51,6 +46,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.integrate import quad\n",
+    "import numpy as np\n",
+    "import pandas as pd"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -61,25 +67,8 @@
     "1. $f(x) > 0$ for all $x$ in $X$\n",
     "2. $\\int f(x) = 1$ over the range of $X$\n",
     "\n",
-    "Let us confirm the p.d.f. has these properties."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Let us confirm the p.d.f. has these properties.\n",
     "We first define a function that returns the value of $f(a)$, where $a \\in (0,1)$."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from scipy.integrate import quad\n",
-    "import numpy as np\n",
-    "import pandas as pd"
    ]
   },
   {
@@ -104,47 +93,35 @@
     "\n",
     "1. Create a **DataFrame** with columns $x$ and $f(x)$\n",
     "2. Filter the **DataFrame** for rows $f(x) \\leq 0$\n",
-    "3. Check size of filtered **DataFrame** is 0"
+    "3. Check size of filtered **DataFrame** is 0\n",
+    "\n",
+    "If $f(x)>0$, we would expect the size of the DataFrame to be size 0."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# declare an array\n",
-    "x = np.arange(start=0, stop=1, step=0.000001)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# create the df\n",
-    "df_pdf = pd.DataFrame(data=x, columns={'x'})\n",
-    "df_pdf['f'] = pdf(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "True"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "execution_count": 5
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "# declare an array\n",
+    "x = np.arange(start=0, stop=1, step=0.000001)\n",
+    "\n",
+    "# create the df\n",
+    "df_pdf = pd.DataFrame(data=x, columns={'x'})\n",
+    "df_pdf['f'] = pdf(x)\n",
+    "\n",
     "# filter the df, check df.size is 0\n",
     "filtered_df = df_pdf.query('f < 0')\n",
     "filtered_df.size == 0"
@@ -154,27 +131,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Property 2: $\\int f(x) = 1$"
+    "### Property 2: $\\int f(x) = 1$\n",
+    "\n",
+    "Let us calculate\n",
+    "\n",
+    "$$\n",
+    "\\int_{0}^{1} 4x^{3} \\> dx = \\ldots\n",
+    "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "True"
       ]
      },
+     "execution_count": 4,
      "metadata": {},
-     "execution_count": 6
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# does the pdf integrate to 1 over the range?\n",
     "# function quad returns a tuple, select first element\n",
     "quad(pdf, a=0, b=1)[0] == 1"
    ]
@@ -187,28 +169,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## (b)\n",
     "\n",
     "The c.d.f. of a p.d.f. for a continuous random variable $X$ is\n",
     "\n",
     "$$\n",
-    "F(x) = \\int_{a}^{x} f(x) \\> dx.\n",
+    "F(x) = \\int_{a}^{x} f(y) \\> dx.\n",
     "$$\n",
     "\n",
-    "So for $f(x)$ given in the scenario\n",
+    "So for $f(y)$ given in the scenario\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "    F(x) &= \\int_{0}^{x} 4 x^{3} \\> dx \\\\\n",
-    "        &= 4 \\bigg[ \\frac{1}{4} x^{4} \\bigg]_{0}^{x} + c \\\\\n",
+    "    F(x) &= \\int_{0}^{x} 4 y^{3} \\> dx \\\\\n",
+    "        &= 4 \\bigg[ \\frac{1}{4} y^{4} \\bigg]_{0}^{x} + c \\\\\n",
     "        &= 4 \\bigg( \\frac{1}{4} x^{4} - \\frac{1}{4} 0^{4} \\bigg) \\\\\n",
     "        &= x^{4}.\n",
     "\\end{aligned}\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
@@ -220,28 +202,28 @@
     "Using the c.d.f. we defined in **(b)**\n",
     "\n",
     "$$\n",
-    "F(4) = 0.5^{4} = 0.625.\n",
+    "F(4) = 0.5^{4} = \\ldots\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.0625"
       ]
      },
+     "execution_count": 5,
      "metadata": {},
-     "execution_count": 7
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# confirming using scipy\n",
+    "# calculate using scipy\n",
     "quad(pdf, a=0, b=0.5)[0]"
    ]
   },
@@ -255,28 +237,28 @@
     "Using the c.d.f. we defined in **(b)**\n",
     "\n",
     "$$\n",
-    "P(X > 0.42) = 1 - F(0.42) = 1 - (0.42)^{4} = 0.96888304.\n",
+    "P(X > 0.42) = 1 - F(0.42) = 1 - (0.42)^{4} = \\ldots\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.96888304"
       ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "execution_count": 8
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# confirming using scipy\n",
+    "# calculate using scipy\n",
     "1 - quad(pdf, a=0, b=0.42)[0]"
    ]
   },
@@ -290,24 +272,24 @@
     "Using the c.d.f. we defined in **(b)**\n",
     "\n",
     "$$\n",
-    "P(0.15 < X < 0.65) = F(0.65) - F(0.15) = (0.65)^{4} - (0.15)^{4} = 0.178.\n",
+    "P(0.15 < X < 0.65) = F(0.65) - F(0.15) = (0.65)^{4} - (0.15)^{4} = \\ldots\n",
     "$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.178"
       ]
      },
+     "execution_count": 7,
      "metadata": {},
-     "execution_count": 9
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -321,7 +303,7 @@
    "source": [
     "## (f)\n",
     "\n",
-    "For the given p.d.f., the value of $E(X)$ is calculated as\n",
+    "For the given p.d.f., $E(X)$ is\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -329,23 +311,14 @@
     "        &= 4 \\int_{0}^{1} x^{4} \\> dx \\\\\n",
     "        &= 4 \\bigg[ \\frac{1}{5} x^{5} \\bigg]_{0}^{1} \\\\\n",
     "        &= \\frac{4}{5}(1^{5} - 0^{5}) \\\\\n",
-    "        &= \\frac{4}{5}.\n",
+    "        &= \\ldots\n",
     "\\end{aligned}\n",
     "$$"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let us confirm this by using `scipy`.\n",
-    "\n",
-    "We need to define a new function: `xfx`."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,18 +331,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.8"
       ]
      },
+     "execution_count": 9,
      "metadata": {},
-     "execution_count": 11
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -379,10 +352,12 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## (g)\n",
     "\n",
-    "For the given p.d.f., the value of $V(X)$ is calculated as\n",
+    "For the given p.d.f., $V(X)$ is\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -391,52 +366,35 @@
     "        &= 4 \\bigg[ \\frac{1}{6} x^{6} \\bigg]_{0}^{1} - \\frac{16}{25} \\\\\n",
     "        &= \\frac{2}{3}(1^{6} - 0^{6}) - \\frac{16}{25} \\\\\n",
     "        &= \\frac{2}{3} - \\frac{16}{25} \\\\\n",
-    "        &= \\frac{2}{75}.\n",
+    "        &= \\ldots\n",
     "\\end{aligned}\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Let us confirm this by using `scipy`.\n",
-    "\n",
-    "We need to define a new function: `x2fx`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def x2fx(a: float) -> float:\n",
-    "    '''Calculates value of a^2.f(a).\n",
-    "    Valid range of a: (0, 1)'''\n",
-    "    return (a ** 2) * 4 * (a ** 3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "output_type": "execute_result",
      "data": {
       "text/plain": [
        "0.026666666666666616"
       ]
      },
+     "execution_count": 10,
      "metadata": {},
-     "execution_count": 13
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    " quad(x2fx, a=0, b=1)[0] - (mean ** 2)"
+    "def x2fx(a: float) -> float:\n",
+    "    '''Calculates value of a^2.f(a).\n",
+    "    Valid range of a: (0, 1)'''\n",
+    "    return (a ** 2) * 4 * (a ** 3)\n",
+    "\n",
+    "\n",
+    "quad(x2fx, a=0, b=1)[0] - (mean ** 2)"
    ]
   }
  ],
@@ -456,7 +414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
