--- a/notebooks/Ex04_Poisson.ipynb
+++ b/notebooks/Ex04_Poisson.ipynb
@@ -6,25 +6,8 @@
    "source": [
     "# Poisson Distribution in Python\n",
     "\n",
-    "Date: 2020-10-29"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy.stats as stats\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Date: 2020-10-29\n",
+    "\n",
     "## Scenario\n",
     "\n",
     "Some of the sky mermaids are early risers.\n",
@@ -62,10 +45,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.stats as stats\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (a)\n",
+    "## (a)\n",
     "\n",
     "Let $X$ be a random variable that represents the number of complaints received by the MP between 4am and 5am from the sky mermaids on a busy day.\n",
     "Then $X$ can be modelled by a **binomial distribution**, with parameters $n=100$, $p=0.05$, so $X \\sim B(100,0.05)$."
@@ -73,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,9 +79,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (b)\n",
+    "## (b)\n",
     "\n",
-    "For large values of $n$ and small values of $p$, a random variable following the **binomial distribution**, $B(n, p)$, has approximately the same distribution as a random variable following the **Poisson distribution** with parameter $np$, so $B(n, p) \\approx Poisson(np)$.\n",
+    "The **Poisson approximation of rare events** states that, for large values of $n$ and small values of $p$, a random variable following the **binomial distribution**, $B(n, p)$, has approximately the same distribution as a random variable following the **Poisson distribution** with parameter $np$, so $B(n, p) \\approx Poisson(np)$.\n",
     "\n",
     "Given this, if the MP receives 100 complaints on a busy day, 5% of which arrive between 4am and 5am, then\n",
     "\n",
@@ -97,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +103,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (c)"
+    "## (c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# declare the range of x\n",
+    "range_x = np.arange(start=0, stop=19)"
    ]
   },
   {
@@ -117,39 +122,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "range_x = np.arange(start=0, stop=19)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_complaints = pd.DataFrame(data=range_x, columns={'x'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_complaints['Binomial: p(x)'] = binomial_x.pmf(df_complaints['x'])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# construct the df\n",
+    "df_complaints = pd.DataFrame(data=range_x, columns={'x'})\n",
+    "df_complaints['Binomial: p(x)'] = binomial_x.pmf(df_complaints['x'])\n",
     "df_complaints['Poisson: p(x)'] = poisson_x.pmf(df_complaints['x'])"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the distributions."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +146,7 @@
        "[Text(0.5, 1.0, 'Binomial distribution: B(100, 0.05)'), Text(0, 0.5, 'p(x)')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -186,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +183,7 @@
        "[Text(0.5, 1.0, 'Probability distribution: Poisson(5)'), Text(0, 0.5, 'p(x)')]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -225,16 +213,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (d)\n",
+    "## (d)\n",
     "\n",
-    "The probability the MP receives seven complaints between 4am and 5am is"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Binomial\n",
+    "### Binomial\n",
+    "\n",
+    "The probability the MP receives seven complaints between 4am and 5am is\n",
     "\n",
     "$$\n",
     "P(X = 20) = p(20) = \\binom{100}{7}0.05^{7}0.95^{93} = \\ldots\n",
@@ -243,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +235,7 @@
        "0.10602553736478391"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Poisson\n",
+    "### Poisson\n",
     "\n",
     "The probability $P(X=x)$ for a Poisson distribution is\n",
     "\n",
@@ -282,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +274,7 @@
        "0.10444486295705395"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,16 +287,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (e)\n",
+    "## (e)\n",
     "\n",
-    "The probability the MP receives no more than 10 complaints from the sky mermaids between 4am and 5am is"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Binomial\n",
+    "### Binomial\n",
+    "\n",
+    "The probability the MP receives no more than 10 complaints from the sky mermaids between 4am and 5am is\n",
     "\n",
     "$$\n",
     "P(X \\leq 10) = F(10) = \\sum_{k=0}^{10} \\binom{100}{k}0.05^{k}0.95^{n-k} = \\ldots\n",
@@ -322,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +309,7 @@
        "0.9885275899325152"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +322,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Poisson\n",
+    "### Poisson\n",
     "\n",
     "The probability $P(X \\leq x)$ for a Poisson distribution is\n",
     "\n",
@@ -361,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +348,7 @@
        "0.9863047314016171"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -383,7 +361,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (f)\n",
+    "## (f)\n",
     "\n",
     "The probability the MP will receive more than five complaints between 4am and 5am is"
    ]
@@ -401,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +388,7 @@
        "0.38400087204385724"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -441,7 +419,7 @@
        "0.384039345166937"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
