--- a/notebooks/Ex06_Geometric.ipynb
+++ b/notebooks/Ex06_Geometric.ipynb
@@ -4,27 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Geometric Distribution in Python\n",
+    "# Geometric Distribution\n",
     "\n",
-    "Date: 2020-10-31"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy.stats as stats\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Date: 2020-10-31\n",
+    "\n",
     "## Scenario\n",
     "\n",
     "A company specialises in chartering flights from Narnia.\n",
@@ -66,10 +49,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.stats as stats\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (a)\n",
+    "## (a)\n",
     "\n",
     "Let $Y$ be a random variable that represents that first flight from Narnia where a sky mermaid is spotted.\n",
     "Then $Y$ is modelled by a **geometric distribution**, with parameter $p=0.17$, so $Y \\sim G(0.17)$."
@@ -88,7 +83,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (b)\n",
+    "## (b)\n",
     "\n",
     "We'll disply the p.d.f. and c.d.f. using a pandas **DataFrame**."
    ]
@@ -110,15 +105,8 @@
    "outputs": [],
    "source": [
     "# declare a DataFrame to hold the pdf and cdf\n",
-    "df_first_mermaid = pd.DataFrame(data=range_y, columns={'y'})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df_first_mermaid = pd.DataFrame(data=range_y, columns={'y'})\n",
+    "\n",
     "# append pmf and cdf to df\n",
     "df_first_mermaid['p(y)'] = y.pmf(k=df_first_mermaid['y'])\n",
     "df_first_mermaid['F(y)'] = y.cdf(x=df_first_mermaid['y'])"
@@ -126,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +278,7 @@
        "17  18  0.007158  0.965053"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,12 +292,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (c)"
+    "## (c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +306,7 @@
        "[Text(0.5, 1.0, 'Probability distribution: G(0.17)')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -348,15 +336,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (d)\n",
+    "## (d)\n",
     "\n",
-    "The mean and variance of the geometric distribution are\n",
+    "The mean of a geometric distribution is\n",
     "\n",
     "$$\n",
-    "\\begin{aligned}\n",
-    "    E(Y) &= \\frac{1}{p}, \\\\\n",
-    "    V(Y) &= \\frac{1 - p}{p^{2}}.\n",
-    "\\end{aligned}\n",
+    "E(Y) = \\frac{1}{p} = \\ldots\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5.88235294117647"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The variance of a geometric distribution is\n",
+    "\n",
+    "$$\n",
+    "V(Y) = \\frac{1 - p}{p^{2}} = \\ldots\n",
     "$$"
    ]
   },
@@ -368,30 +384,10 @@
     {
      "data": {
       "text/plain": [
-       "5.88235294117647"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "28.719723183391"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -404,7 +400,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (e)\n",
+    "## (e)\n",
     "\n",
     "The probability $P(X=x)$ for a geometric distribution is\n",
     "\n",
@@ -421,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -430,7 +426,7 @@
        "0.05557986347272999"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,9 +439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (f)\n",
-    "\n",
-    "### (f)\n",
+    "## (f)\n",
     "\n",
     "The probability $P(X \\leq x)$ for a geometric distribution is\n",
     "\n",
@@ -462,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -471,7 +465,7 @@
        "0.6060959357"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +478,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (g)\n",
+    "## (g)\n",
     "\n",
     "The probability it will take seven or more flight to first spot a sky mermaid is\n",
     "\n",
@@ -493,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -502,34 +496,13 @@
        "0.32694037336899995"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "y.sf(x=6)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "ppf() got an unexpected keyword argument 'loc'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-16-8cbb47a8180d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0my\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mppf\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mq\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m0.75\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mloc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m: ppf() got an unexpected keyword argument 'loc'"
-     ]
-    }
-   ],
-   "source": [
-    "y.ppf(q=0.75, loc=2)"
    ]
   }
  ],
