--- a/notebooks/Ex07_Exponential.ipynb
+++ b/notebooks/Ex07_Exponential.ipynb
@@ -6,25 +6,8 @@
    "source": [
     "# Exponential Distribution in Python\n",
     "\n",
-    "Date: 2020-10-31"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy.stats as stats\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "import seaborn as sns"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Date: 2020-10-31\n",
+    "\n",
     "## Scenario\n",
     "\n",
     "Some of the sky mermaids are early risers.\n",
@@ -54,16 +37,28 @@
     "**(d)** During the hour, the MP plans to make themselves some breakfast.\n",
     "They estimate it will take them 12 minutes to make a bacon sandwich.\n",
     "\n",
-    "Assuming they begin to make the sandwich immediately after receiving a complaint, what is the probability they do not receive another complaint during the time they are away?\n",
+    "Assuming they begin to make the sandwich immediately after receiving a complaint, what is the probability they do not receive another complaint during the time they are away cooking breakfast?\n",
     "\n",
     "-----"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.stats as stats\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import seaborn as sns"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (a)\n",
+    "## (a)\n",
     "\n",
     "Let $T$ be a random variable that represents the waiting time between successive complaints.\n",
     "The MP receives on average 5 complaints between 4am and 5am.\n",
@@ -90,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (b)"
+    "## (b)"
    ]
   },
   {
@@ -99,6 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# define the range\n",
     "range_t = np.arange(start=0, stop=1, step=0.001)"
    ]
   },
@@ -108,21 +104,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_earlyComplaints = pd.DataFrame(data=range_t, columns={'t'})"
+    "# construct the df\n",
+    "df_earlyComplaints = pd.DataFrame(data=range_t, columns={'t'})\n",
+    "df_earlyComplaints['f(t)'] = t.pdf(x=range_t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Plot the distribution."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_earlyComplaints['f(t)'] = t.pdf(x=range_t)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +127,7 @@
        "[Text(0.5, 1.0, 'Probability distribution: M(5)')]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -161,7 +157,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (c)\n",
+    "## (c)\n",
     "\n",
     "The probability $P(X \\leq x)$ for an exponential distribution is\n",
     "\n",
@@ -184,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +189,7 @@
        "0.28346868942621073"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (d)\n",
+    "## (d)\n",
     "\n",
     "The probability they will not receive a complaint during the time they are away making breakfast, given that it takes them\n",
     "\n",
@@ -223,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +228,7 @@
        "0.36787944117144233"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
