--- a/notebooks/Ex08_DiscreteUniform.ipynb
+++ b/notebooks/Ex08_DiscreteUniform.ipynb
@@ -6,22 +6,8 @@
    "source": [
     "# Discrete Uniform Distribution in Python\n",
     "\n",
-    "Date: 2020-11-02"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy.stats as stats"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Date: 2020-11-02\n",
+    "\n",
     "## Scenario\n",
     "\n",
     "A sky mermaid is playing a game with a pack of cards.\n",
@@ -51,10 +37,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.stats as stats"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (a)\n",
+    "## (a)\n",
     "\n",
     "Let $U$ be a random variable that represents the number of turns before the card is revealed.\n",
     "Then $U$ has a **discrete uniform distribution** with parameters $m=1$ and $n=52$."
@@ -81,20 +76,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (b)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The mean and variance of the discrete uniform distribution are\n",
+    "## (b)\n",
+    "\n",
+    "The mean of a discrete uniform distribution is\n",
     "\n",
     "$$\n",
-    "\\begin{aligned}\n",
-    "    E(Y) &= \\frac{1}{2} (m+n), \\\\\n",
-    "    V(Y) &= \\frac{1}{12} (n-m)(n-m+2).\n",
-    "\\end{aligned}\n",
+    "E(U) = \\frac{1}{2} (m+n)\n",
     "$$"
    ]
   },
@@ -116,6 +103,17 @@
    ],
    "source": [
     "u.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The variance of a discrete uniform distribution is\n",
+    "\n",
+    "$$\n",
+    "V(U) = \\frac{1}{12} (n-m)(n-m+2).\n",
+    "$$"
    ]
   },
   {
@@ -142,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (c)\n",
+    "## (c)\n",
     "\n",
     "The probability $P(X=x)$ for a discrete uniform distribution is\n",
     "\n",
@@ -181,7 +179,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (d)\n",
+    "## (d)\n",
     "\n",
     "The probability $P(X \\leq x)$ for a discrete uniform distribution is\n",
     "\n",
@@ -220,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (e)\n",
+    "## (e)\n",
     "\n",
     "The probability it will take between 25 to 30 turns to find the pre-selected card is\n",
     "\n",
