--- a/notebooks/Ex09_ContinuousUniform.ipynb
+++ b/notebooks/Ex09_ContinuousUniform.ipynb
@@ -6,22 +6,8 @@
    "source": [
     "# Continuous Uniform Distribution in Python\n",
     "\n",
-    "Date: 2020-11-02"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import scipy.stats as stats"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "Date: 2020-11-02\n",
+    "\n",
     "## Scenario\n",
     "\n",
     "A sky mermaid is waiting for a delivery from the **Cardamom Mountains** online store.\n",
@@ -49,10 +35,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.stats as stats"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (a)\n",
+    "## (a)\n",
     "\n",
     "Let $T$ be the length of time after 2.00pm, in minutes, that the sky mermaid needs to wait for the delivery.\n",
     "Then $U$ has a **continuous uniform distribution** with parameters $a=0$ and $b=90$, since all times between 2.00pm and 3.30pm are equally likely for the delivery.\n",
@@ -79,15 +74,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (b)\n",
+    "## (b)\n",
     "\n",
-    "The mean and variance of a continuous uniform distribution are\n",
+    "The mean a continuous uniform distribution is\n",
     "\n",
     "$$\n",
-    "\\begin{aligned}\n",
-    "    E(Y) &= \\frac{1}{2} (a+b), \\\\\n",
-    "    V(Y) &= \\frac{1}{12} (b-a)^{2}.\n",
-    "\\end{aligned}\n",
+    "E(X) = \\frac{1}{2} (a+b).\n",
     "$$"
    ]
   },
@@ -109,6 +101,17 @@
    ],
    "source": [
     "t.mean()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Thevariance of a continuous uniform distribution is\n",
+    "\n",
+    "$$\n",
+    "V(X) = \\frac{1}{12} (b-a)^{2}.\n",
+    "$$"
    ]
   },
   {
@@ -135,7 +138,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (c)\n",
+    "## (c)\n",
     "\n",
     "The probability $P(X \\leq x)$ for a continuous uniform distribution is\n",
     "\n",
@@ -174,7 +177,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### (d)\n",
+    "## (d)\n",
     "\n",
     "The probability that the sky mermaid needs to wait between 35 minutes and one hour five minutes is\n",
     "\n",
