--- a/notebooks/Ex01_DiscreteRandomVariable.ipynb
+++ b/notebooks/Ex01_DiscreteRandomVariable.ipynb
@@ -1,33 +1,13 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": 3
-  },
-  "orig_nbformat": 2
- },
- "nbformat": 4,
- "nbformat_minor": 2,
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# Example: Discrete Random Variables\n",
     "\n",
-    "Date: 2020-11-08"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
+    "Date: 2020-11-08\n",
+    "\n",
     "## Scenario\n",
     "\n",
     "Suppose that a random variable $x$ can only take the values ${0, 1, 2, 3, 4}$.\n",
@@ -37,13 +17,17 @@
     "\n",
     "| $x$    | 0   | 1   | 2   | 3   | 4   |\n",
     "|--------|-----|-----|-----|-----|-----|\n",
-    "| $p(x)$ | 0.3 | 0.1 | 0.4 | 0.1 | 0.1 |"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+    "| $p(x)$ | 0.3 | 0.1 | 0.4 | 0.1 | 0.1 |\n",
+    "\n",
+    "-----"
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
+    "## Questions\n",
+    "\n",
     "**(a)** Prove that $p(x)$ a valid p.m.f. for $X$.\n",
     "\n",
     "**(b)** Construct a table showing the c.d.f. of $X$.\n",
@@ -57,11 +41,11 @@
     "**(f)** Calculate the variance of $X$.\n",
     "\n",
     "-----"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## (a)\n",
     "\n",
@@ -71,11 +55,11 @@
     "2. $\\sum_{x} p(x) = 1$, where the summation is over all $x$ in the range of $X$.\n",
     "\n",
     "The $p(x)$ given in the scenario meets both of the criteria, so $p(x)$ is a valid p.m.f."
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## (b)\n",
     "\n",
@@ -85,11 +69,11 @@
     "|--------|-----|-----|-----|-----|-----|\n",
     "| $p(x)$ | 0.3 | 0.1 | 0.4 | 0.1 | 0.1 |\n",
     "| $F(X)$ | 0.3 | 0.4 | 0.8 | 0.9 | 1   |"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## (c)\n",
     "\n",
@@ -97,11 +81,11 @@
     "Reading from **Table 1** or **Table 2**, we can see that\n",
     "\n",
     "$$P(X=3) = 0.1.$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## (d)\n",
     "\n",
@@ -109,11 +93,11 @@
     "Reading from **Table 2**, we can see that\n",
     "\n",
     "$$P(X < 3) = F(2) = 0.8.$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## (e)\n",
     "\n",
@@ -126,11 +110,11 @@
     "        &= 1.6.\n",
     "\\end{aligned}\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## (f)\n",
     "\n",
@@ -144,9 +128,28 @@
     "        &= 1.64.\n",
     "\\end{aligned}\n",
     "$$"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
+   ]
   }
- ]
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.3"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 4
 }
